center align dialog image, added loader, fixed some css issue

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -3,19 +3,25 @@
 .item {
 	float: left;
 	width: 24%;
+	margin-bottom: 10px;
 }
 
 .listing {
-	margin-top: 20px;
-	padding: 0px 10px;
-}
-
-.grid-item {
-  margin-bottom: 10px;
+	margin-top: 70px;
+    padding: 0px 10px;
+    float: left;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .dialog-container {
     padding-top: 0px !important;
+}
+
+.big-image {
+	margin:auto;
+	display: block;
+	margin-top: 24px;
 }
 
 .header {
